--- a/style.css
+++ b/style.css
@@ -1,30 +1,55 @@
 body {
     background: black;
     color: lime;
-    font-family: "Comic Sans MS", cursive, sans-serif;
+    font-family: 'Comic Sans MS', cursive;
     text-align: center;
-    animation: blinkBackground 1s infinite alternate;
+    cursor: url('https://media.tenor.com/T90t2blDnvEAAAAi/dealwithit-thug-life.gif'), auto;
+    overflow-x: hidden;
 }
 
 h1 {
-    font-size: 3em;
-    text-shadow: 2px 2px red;
-    animation: shake 0.3s infinite;
+    font-size: 4em;
+    text-shadow: 3px 3px red, -3px -3px blue;
+    animation: shake 0.4s infinite;
+    margin: 30px 0;
 }
 
-.effects img {
+img {
     width: 200px;
     margin: 10px;
-    animation: spin 2s linear infinite;
+    border: 4px solid lime;
+    animation: spin 5s linear infinite;
 }
 
-@keyframes blinkBackground {
-    0% { background-color: black; }
-    25% { background-color: blue; }
-    50% { background-color: darkred; }
-    75% { background-color: greenyellow; }
-    100% { background-color: purple; }
+.mlg-zone {
+    display: block;
+    padding: 20px;
+    animation: blinkBackground 1s infinite alternate;
 }
+
+button#mlg-toggle {
+    background-color: red;
+    color: white;
+    font-size: 1.5em;
+    border: 3px solid yellow;
+    padding: 10px 20px;
+    margin-top: 20px;
+    cursor: pointer;
+    animation: pulse 1s infinite;
+}
+
+footer {
+    margin-top: 50px;
+    font-size: 1.2em;
+    color: white;
+}
+
+/* Extra MLG FX */
+.mlg-crazy {
+    animation: flashyMLG 0.5s infinite;
+}
+
+/* Animations */
 
 @keyframes shake {
     0% { transform: translate(1px, 1px) rotate(0deg); }
@@ -37,10 +62,32 @@ h1 {
 @keyframes spin {
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
-}MLG
+}
 
-footer {
-    margin-top: 30px;
-    font-size: 1.2em;
-    color: white;
+@keyframes blinkBackground {
+    0%   { background-color: red; }
+    10%  { background-color: blue; }
+    20%  { background-color: lime; }
+    30%  { background-color: yellow; }
+    40%  { background-color: magenta; }
+    50%  { background-color: cyan; }
+    60%  { background-color: orange; }
+    70%  { background-color: deeppink; }
+    80%  { background-color: purple; }
+    90%  { background-color: gold; }
+    100% { background-color: red; }
+}
+
+@keyframes pulse {
+    0% { transform: scale(1); }
+    50% { transform: scale(1.1); background: yellow; color: red; }
+    100% { transform: scale(1); }
+}
+
+@keyframes flashyMLG {
+    0% { filter: hue-rotate(0deg); }
+    25% { filter: hue-rotate(90deg); }
+    50% { filter: hue-rotate(180deg); }
+    75% { filter: hue-rotate(270deg); }
+    100% { filter: hue-rotate(360deg); }
 }
